--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+chumsky = "0.11.0"
 logos = "0.15.1"
 miette = { version = "7.6.0", features = ["fancy"] }
 thiserror = "2.0.16"
