--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 chumsky = "0.11.0"
+inkwell = { version = "0.6.0", features = ["llvm18-1"] }
 logos = "0.15.1"
 miette = { version = "7.6.0", features = ["fancy"] }
 thiserror = "2.0.16"
