--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "cscript_ref"
+name = "cscript"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-chumsky = "0.11.0"
+chumsky = "0.11.1"
 clap = { version = "4.5.47", features = ["derive"] }
 inkwell = { version = "0.6.0", features = ["llvm18-1"] }
 logos = "0.15.1"
